<resources>
    <string name="app_name">UnipiPLIAlert</string>

    <!-- MainActivity -->
    <string name="sos_button_text" translatable="false">SOS</string>
    <string name="abort_text">Abort</string>
    <string name="alert_dialog_title">Warning!</string>
    <string name="alert_dialog_message">You are under direct sunlight! Please move to a darker place!!</string>
    <string name="user_confirmation_dialog_cancel_button">Cancel</string>
    <string name="user_confirmation_dialog_wrong_input">Wrong Credentials!</string>
    <string name="tts_message" translatable="false">Help me.</string>

    <!-- SMS -->
    <string name="sms_text_with_location">ATTENTION! I am in DANGER and I need HELP. My location is: </string>
    <string name="sms_text_without_location">Please HELP me. I am in danger.</string>
    <string name="abort_sms_text">FALSE ALARM! Everything is OK!</string>
    <string name="message_not_sent_toast">Message not sent!</string>
    <string name="message_sent_toast">Message sent!</string>

    <!-- Slide1 -->
    <string name="top_text">Are you in danger?   Do not worry anymore!</string>
    <string name="bottom_text">" <b>UnipiPLIAlert</b> is here for you!! In an emergency,
        <b>UnipiPLIAlert</b> will automatically (or manually) call for help."</string>
    <string name="image_view_content_description" translatable="false">SOS image</string>

    <!-- Slide2 -->
    <string name="slide2_title">We need these <b>3</b> permissions from you…</string>
    <string name="slide2_location"><b>Location Permission</b>: in order to access your location and send     help in case of an emergency.</string>
    <string name="slide2_sms"><b>SMS Permission</b>: so as to send an SMS to your favourite contacts, the     moment you are in danger.</string>
    <string name="slide2_phone"><b>Phone Permission</b>: in order to process your contacts\' numbers and then     send the appropriate SMS.</string>

    <!-- Slide3 -->
    <string name="slide3_title" translatable="false">UnipiPLIAlert</string>
    <string name="username_hint_text_input">Username</string>
    <string name="password_hint_text_input">Password</string>
    <string name="save_button_text">Save</string>
    <string name="contact1_hint">Contact #1</string>
    <string name="contact2_hint">Contact #2</string>

    <!-- Error messages in Slide3 -->
    <string name="username_text_input_layout_error_message">Username must be at least 4 characters!</string>
    <string name="password_text_input_layout_error_message">Password must be at least 4 characters!</string>
    <string name="contact_without_country_code_error_message">Insert Country Code and Tel. Number!</string>

    <!-- Settings Menu -->
    <string name="open_source_menu_item" translatable="false">Open Source</string>
    <string name="contacts_menu_item">Contacts</string>

    <!-- Contacts Change Activity -->
    <string name="unsaved_changes_dialog_message">You have unsaved changes!</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Stay</string>

</resources>
