<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sidewaysMarginS3"
        android:layout_marginStart="@dimen/sidewaysMarginS3"
        android:layout_marginTop="@dimen/usernameMarginTopS3"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewSlide3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint_text_input"
            android:inputType="text"
            android:maxLength="10"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sidewaysMarginS3"
        android:layout_marginStart="@dimen/sidewaysMarginS3"
        android:layout_marginTop="@dimen/marginTopS3"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUserName"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint_text_input"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/titleTextViewSlide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titleMarginTopS3"
        android:fontFamily="cursive"
        android:text="@string/slide3_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sidewaysMarginS3"
        android:layout_marginStart="@dimen/sidewaysMarginS3"
        android:layout_marginTop="@dimen/saveButtonMarginTopS3"
        android:alpha="0.5"
        android:background="@drawable/save_button_selector"
        android:enabled="false"
        android:text="@string/save_button_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutContact2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutContact1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sidewaysMarginS3"
        android:layout_marginStart="@dimen/sidewaysMarginS3"
        android:layout_marginTop="@dimen/marginTopS3"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/contact1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact1_hint"
            android:inputType="number"
            android:maxLength="20"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutContact2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sidewaysMarginS3"
        android:layout_marginStart="@dimen/sidewaysMarginS3"
        android:layout_marginTop="@dimen/marginTopS3"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutContact1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/contact2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact2_hint"
            android:inputType="number"
            android:maxLength="20"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>